; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_math.c_php_acosh.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_math.c_php_acosh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZEND_NAN = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @php_acosh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @php_acosh(double %0) #0 {
  %2 = alloca double, align 8
  store double %0, double* %2, align 8
  %3 = load double, double* %2, align 8
  %4 = load double, double* %2, align 8
  %5 = load double, double* %2, align 8
  %6 = fmul double %4, %5
  %7 = fsub double %6, 1.000000e+00
  %8 = call i64 @sqrt(double %7)
  %9 = sitofp i64 %8 to double
  %10 = fadd double %3, %9
  %11 = fptosi double %10 to i64
  %12 = call double @log(i64 %11)
  ret double %12
}

declare dso_local double @log(i64) #1

declare dso_local i64 @sqrt(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
